--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory = ./ansible/hosts.ini
 interpreter_python3 = /usr/bin/python3.10
-remote_user = root
+remote_user = davidking
 private_key_file = ~/.ssh/do_key_01
