edit ansible config file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-inventory = ./ansible/hosts.ini
-interpreter_python3 = /usr/local/bin/python3.10
-remote_user = root
-private_key_file = ~/.ssh/do_key_01
-host_key_checking = false
+inventory=/ansible/hosts
+interpreter_python3=/usr/local/bin/python3.10
+remote_user=root
+private_key_file=~/.ssh/do_key_01
+host_key_checking=false
