edit ansible config file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory=/ansible/hosts
+inventory=./ansible/hosts
 interpreter_python3=/usr/local/bin/python3.10
 remote_user=root
 private_key_file=~/.ssh/do_key_01
