--- a/ansible/apache-install.yaml
+++ b/ansible/apache-install.yaml
@@ -1,6 +1,6 @@
 - name: Install apache server
   become: true
-  hosts: all
+  hosts: droplets
 
   tasks:
     - name: Add the user 'sammy' and add it to 'sudo'
